[package]
name = "rust_levelup"
version = "0.1.0"
authors = ["James Rocker <james.rocker@simplybusiness.co.uk>"]
edition = "2018"
description = "A package I'm building to learn more about rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.3.0"